--- a/src/AppBlack.css
+++ b/src/AppBlack.css
@@ -5,23 +5,19 @@
 body {
     margin: 0;
     font-family: Poppins;
-    background-color: #e0f7e9;
-    color: #012324;
+    background-color: #012324;
+    color: #eee;
     font-size: 15px;
     min-height: 100vh;
-    background-image: linear-gradient(
-            to right,
-            transparent 0 49px,
-            #0123241a 49px
-        ),
-        linear-gradient(to bottom, transparent 0 49px, #0123241a 49px);
+    background-image: linear-gradient(to right, transparent 0 49px, #eee1 49px),
+        linear-gradient(to bottom, transparent 0 49px, #eee1 49px);
     background-size: 50px 50px;
     &::before {
         position: fixed;
         width: 400px;
         height: 400px;
         content: "";
-        background-image: linear-gradient(to right, #7be728, #3bb78f);
+        background-image: linear-gradient(to right, #d02e23, #7a43b6);
         z-index: -1;
         top: -200px;
         left: calc(50% - 200px);
@@ -64,8 +60,8 @@ header {
             cursor: pointer;
         }
         & .active {
-            color: #3bb78f;
-            text-shadow: 0 0 5px #7be728;
+            color: #e945e3;
+            text-shadow: 0 0 5px #7a43b6;
         }
     }
     & .icon-bar {
@@ -96,7 +92,7 @@ section {
                     background-image: linear-gradient(
                         to right,
                         #7be728,
-                        #3bb78f,
+                        #f3265f,
                         #7f40ac,
                         #7be728
                     );
@@ -108,18 +104,18 @@ section {
                 }
             }
             & .description {
-                color: #01232499;
+                color: #eee5;
                 margin: 30px 0;
-                border-left: 0.7em solid #3bb78f;
+                border-left: 0.7em solid #e945e3;
                 padding-left: 2em;
             }
             & a {
                 display: block;
                 font-size: large;
-                color: #012324;
+                color: #eee;
                 font-weight: bold;
                 text-decoration: none;
-                border: 1px solid #012324;
+                border: 1px solid #eee;
                 background-color: transparent;
                 width: max-content;
                 padding: 20px 30px;
@@ -132,32 +128,36 @@ section {
                 display: inline-flex;
                 flex-direction: column;
                 width: min(100%, 400px);
-                box-shadow: 0 150px 150px #3bb78f73;
+                box-shadow: 0 150px 150px #e945e333;
                 transition: 0.5s;
                 &:hover {
-                    box-shadow: 0 150px 150px #3bb78fba;
+                    box-shadow: 0 150px 150px #e945e355;
                 }
                 & img {
                     width: 100%;
                     height: min(50vh, 700px);
                     object-fit: cover;
                     object-position: top;
-                    /* clip-path: polygon(
+                    clip-path: polygon(
                         0% 0%,
                         80% 0%,
                         100% 20%,
                         100% 100%,
                         0% 100%
-                    ); */
+                    );
                 }
                 & .info {
-                    background-color: #dae6e6;
-                    color: #012324;
+                    background-color: #eee;
+                    color: #010824;
                     display: grid;
+                    grid-template-columns: repeat(2, 1fr);
                     text-align: center;
+                    gap: 20px;
                     padding: 20px;
                     font-size: 1.2em;
-                    & div:nth-child(1) {
+                    & div:nth-child(1),
+                    div:nth-child(2),
+                    div:nth-child(3) {
                         font-weight: bold;
                     }
                 }
@@ -171,14 +171,10 @@ section {
             font-family: "MuseoModerno", system-ui;
         }
         & .des {
-            color: #01232499;
+            color: #eee5;
             text-align: center;
-            max-width: 630px;
+            max-width: 500px;
             margin: auto;
-        }
-        & .experience {
-            margin-top: 5px;
-            color: #012324e0;
         }
         & .list {
             margin-top: 50px;
@@ -192,7 +188,7 @@ section {
                 content: "";
                 width: 70%;
                 height: 70%;
-                background-image: linear-gradient(-45deg, #7be728, #3bb78f);
+                background-image: linear-gradient(-45deg, red, blue);
                 top: 50%;
                 left: 50%;
                 transform: translate(-50%, -50%);
@@ -201,22 +197,15 @@ section {
                 background-size: 200% auto;
             }
             & .item {
-                display: flex;
-                flex-direction: column;
-                justify-content: space-between;
                 backdrop-filter: blur(50px);
                 padding: 20px;
                 border-radius: 20px;
-                background-color: #e0f7e988;
+                background-color: #01082488;
                 & svg {
-                    /* font-size: 30px; */
-                    background-color: #01232422;
+                    font-size: 30px;
+                    background-color: #eee2;
                     padding: 10px;
                     border-radius: 10px;
-                    width: auto; /* Prevents the SVG from taking the full width */
-                    max-width: 30px; /* Adjust the max-width as needed */
-                    height: auto; /* Maintain aspect ratio */
-                    margin: 0; /* Remove auto margin to align left */
                 }
                 & .des {
                     text-align: left;
@@ -234,7 +223,7 @@ section {
             font-family: "MuseoModerno", system-ui;
         }
         & .des {
-            color: #01232499;
+            color: #eee5;
             text-align: center;
             max-width: 500px;
             margin: auto;
@@ -249,7 +238,7 @@ section {
                 margin-bottom: 100px;
                 gap: 20px;
                 & .images {
-                    background-image: linear-gradient(-45deg, #7be728, #3bb78f);
+                    background-image: linear-gradient(-45deg, #473bb4, #be24a9);
                     padding: 40px;
                     text-align: center;
                     border-radius: 20px;
@@ -258,7 +247,7 @@ section {
                     & img {
                         height: 400px;
                         border-radius: 10px;
-                        box-shadow: 0 20px 40px #012324;
+                        box-shadow: 0 20px 40px #010824;
                     }
                 }
                 & .content {
@@ -277,7 +266,7 @@ section {
                         gap: 10px;
                         margin-top: 10px;
                         & div:nth-child(1) svg {
-                            background-color: #01232433;
+                            background-color: #eee3;
                             padding: 20px;
                             font-size: 20px;
                             border-radius: 15px;
@@ -306,7 +295,7 @@ section {
             font-family: "MuseoModerno", system-ui;
         }
         & .des {
-            color: #01232499;
+            color: #eee5;
             text-align: center;
             max-width: 500px;
             margin: auto;
@@ -320,13 +309,13 @@ section {
     }
 }
 
-.animation {
+.animation{
     transform: translateY(50px);
     filter: blur(20px);
     opacity: 0;
     transition: 0.5s;
 }
-.animation.active {
+.animation.active{
     opacity: 1;
     filter: blur(0);
     transform: translateY(0);
@@ -339,49 +328,48 @@ section {
 }
 
 @media screen and (max-width: 1023px) {
-    section.home {
-        & .content {
-            & .name {
+    section.home{
+        & .content{
+            & .name{
                 font-size: 4em;
             }
         }
-        & .avatar {
-            & img {
+        & .avatar{
+            & img{
                 max-height: 500px;
             }
         }
     }
 }
 @media screen and (max-width: 767px) {
-    section {
+    section{
         padding: 20px;
-        &.home {
+        &.home{
             grid-template-columns: 1fr;
             padding-top: 70px;
-            & .content {
-                & a {
+            & .content{
+                & a{
                     margin: auto;
                     font-size: small;
                 }
             }
-            & .avatar {
+            & .avatar{
                 grid-row-start: 1;
             }
         }
-        &.projects {
-            & .list {
-                & .item {
+        &.projects{
+            & .list{
+                & .item{
                     grid-template-columns: 1fr;
-                    & .content {
-                        & h3 {
+                    & .content{
+                        & h3{
                             font-size: 1.2em;
                             margin-bottom: 1em;
                         }
                     }
                 }
-                & .item:nth-child(2n) {
-                    & .content,
-                    .images {
+                & .item:nth-child(2n){
+                    & .content, .images{
                         grid-row-start: auto;
                         grid-column-start: auto;
                         grid-column-end: auto;
@@ -390,8 +378,8 @@ section {
             }
         }
     }
-    header {
-        & nav {
+    header{
+        & nav{
             width: 80%;
             height: 100vh;
             position: fixed;
@@ -399,19 +387,20 @@ section {
             justify-content: start;
             align-items: start;
             inset: 0 auto 0 0;
-            background-color: #012324;
-            color: #e0f7e9;
+            background-color: #eee;
+            color: #0F1225;
             padding: 50px;
             box-sizing: border-box;
             font-weight: bold;
             left: -100%;
-            transition: 0.5s;
+            transition: .5s;
         }
-        & .icon-bar {
+        & .icon-bar{
             display: block;
         }
-        & nav.active {
+        & nav.active{
             left: 0;
-        }
+        } 
     }
 }
+
